--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">test animations 2</div>
-  <script type="text/javascript" src="/animations/9578f2a1fae789d2190b_app.js"></script></body>
+    <div id="root">Animations here</div>
+  <script type="text/javascript" src="/animations/ede81105080fef7a1008_app.js"></script></body>
 </html>
